--- a/style/assignment.css
+++ b/style/assignment.css
@@ -5,6 +5,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin: 0 200px;
+    height: 10px 0px 10px 0px;
 }
 
 body {
@@ -56,12 +57,21 @@ nav a {
     padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    background-color: rgba(229, 84, 115, 0.10);
+}
+
+.banner-description {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 15px;
+    font-weight: 400;
+    padding-top: 5px;
 }
 
 .banner-content {
     max-width: 400px;
     align-items: center;
+    overflow: hidden
 }
 
 .banner-title {
@@ -69,4 +79,96 @@ nav a {
     font-size: 46px;
     font-weight: 800;
     line-height: normal;
+}
+
+.flower-pic {
+    width: 400px;
+}
+
+.banner-section {
+    width: 1920px;
+    height: 850px;
+    padding-top: 20px;
+}
+
+
+/* featured section */
+.featured-flower {}
+
+.flower-title {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.flower-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.flower-types {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px 200px 10px 200px;
+}
+
+.pink {
+    width: 465px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+
+.flower-one {
+    width: 310px;
+    height: 428px;
+}
+
+.flower-two {
+    width: 370px;
+    height: 370px;
+}
+
+.flower-three {
+    width: 314px;
+    height: 471px;
+}
+
+.pink .flower-one {
+    align-items: center;
+}
+
+.skyblue {
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+}
+
+.lightgreen {
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+}
+
+.text-decoration {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
 }
