--- a/style/assignment.css
+++ b/style/assignment.css
@@ -211,3 +211,80 @@ nav a {
     height: 850px;
     padding-top: 20px;
 }
+
+/* Instagram */
+.instagram-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.instagram-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 15px;
+    font-weight: 400px;
+
+}
+
+.insta-flowers {
+    display: flex;
+    justify content: space-between;
+    justify-content: space-around;
+    padding: 10px 200px 10px 200px;
+
+}
+
+.insta-flowers .flower {
+    width: 342px;
+    height: 396px;
+}
+
+.instagram {
+    background: white;
+}
+
+.instagram-flowers {
+    display: flex;
+    background-image: url('../Flower\ Asset');
+}
+
+
+/* Latest details */
+.latest {
+    b
+}
+
+.latest-content{
+    align-items: center;
+}
+
+.latest-title {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.latest-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.input {
+    width: 700px;
+    height: 64px;
+    border-radius: 8px;
+    background: #FFF;
+    align-items: center;
+}
+
