--- a/style/assignment.css
+++ b/style/assignment.css
@@ -99,7 +99,7 @@ nav a {
     color: #272727;
     font-size: 46px;
     font-weight: 800;
-    margin:0;
+    margin: 0;
 }
 
 .flower-pic {
@@ -130,7 +130,7 @@ nav a {
 
 .ff-img3 {
     padding: 0;
-    margin:66px;
+    margin: 66px;
 }
 
 .flower-title {
@@ -212,8 +212,7 @@ nav a {
     margin: 0 auto 0 auto;
 }
 
-.delivery-issue .icon {
-}
+.delivery-issue .icon {}
 
 /**************** hot deal ********************/
 
@@ -245,9 +244,9 @@ nav a {
     overflow: hidden;
 }
 
-.hot-deal > .flower-sec {
- margin: 0;
- width: 40%;
+.hot-deal>.flower-sec {
+    margin: 0;
+    width: 40%;
 }
 
 /* Instagram */
@@ -296,7 +295,7 @@ nav a {
     margin: 100px 0 100px 0;
 }
 
-.latest-content{
+.latest-content {
     margin: 0 auto 0 auto;
     background-image: url('../Flower Asset/Rectangle\ 9.png');
     background-repeat: no-repeat;
@@ -334,3 +333,29 @@ nav a {
     align-items: center;
 }
 
+
+/*************************Footer***************************/
+
+.footer {
+    background-color: #111010;
+    width: auto;
+    height: 400px;
+}
+
+.footer-all{
+    margin: auto;
+    padding-top: 100px;
+}
+
+.footer-content {
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.footer-title {
+    font-size: 40px;
+    font-weight: 800;
+    margin: auto;
+}
